página inicial teste

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Diretório de Receitas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+        <h1>Sabores da Cozinha</h1>
+        </div>
+        <div class="search-container">
+            <form action="/search" method="GET">
+              <input type="text" id="search" name="search" placeholder="Pesquisar..." required>
+              <button type="submit">Pesquisar</button>
+            </form>
+          </div>
+    </header>
+    <img id="inicial" src="imagens comidas/" alt="inicial">
+    <div class="subtit">Lista das receitas mais acessadas:</div>
+    <ol class="lista">
+        <a href="brigadeiro.html"><li>Brigadeiro de colher</li></a>
+        <img src="imagens comidas/brigadeiro.jpg" alt="bigadeiro">
+        <a href="paodequeijo.html"><li>Pão de queijo caseiro</li></a>
+        <img src="imagens comidas/paodequeijo.jpg" alt="paodequiejo">
+        <a href="bolofuba.html"><li>Bolo de fubá</li></a>
+        <img src="imagens comidas/bolofuba.jpg" alt="bolofuba">
+        <a href="bolocenoura.html"><li>Bolo de cenoura</li></a>
+        <img src="imagens comidas/bolocenoura.jpg" alt="bolocenoura">
+        <a href="panqueca.html"><li>Panqueca</li></a>
+        <img src="imagens comidas/panqueca.jpg" alt="panqueca">
+        <a href="feijoada.html"><li>Feijoada</li></a>
+        <img src="imagens comidas/feijoada.jpg" alt="feijoada">
+        <a href="coxinha.html"><li>Coxinha</li></a>
+        <img src="imagens comidas/coxinha.jpg" alt="coxinha">
+        <a href="acaraje.html"><li>Acarajé</li></a>
+        <img src="imagens comidas/acaraje.jpg" alt="acaraje">
+        <a href="paopizza.html"><li>Pão pizza</li></a>
+        <img src="imagens comidas/pao.jpg" alt="pao">
+        <a href="arroz.html"><li>Arroz de forno</li></a>
+        <img src="imagens comidas/arroz.jpg" alt="arroz">
+    </ol>
+
 </body>
 </html>
