--- a/public/bolofuba.html
+++ b/public/bolofuba.html
@@ -4,21 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="bolodefuba.css">
 </head>
 <body>
+    <header>
+    <div class="logo">
+       Sabores da Cozinha
+    </div>
+     <button class="favorite">
+            ❤️ Favoritar
+     </button>
+    </header>
     <h1>3.Bolo de fubá</h1>
+    <div class="container">
+        <div class="conteudo">
     <p class="subtit">Ingredientes(8 porções):</p>
     <ul>
-        <li class="ingredientes">3 ovos</li>
-        <li class="ingredientes">2 xícaras (chá) de fubá</li>
-        <li class="ingredientes">1/2 copo (americano) de óleo</li>
-        <li class="ingredientes">1 colher (sopa) de fermento em pó</li>
-        <li class="ingredientes">2 xícaras (chá) de açúcar</li>
-        <li class="ingredientes">3 colheres (sopa) rasas de farinha de trigo</li>
-        <li class="ingredientes">1 copo de leite</li>
+        <li>3 ovos</li>
+        <li>2 xícaras (chá) de fubá</li>
+        <li>1/2 copo (americano) de óleo</li>
+        <li>1 colher (sopa) de fermento em pó</li>
+        <li>2 xícaras (chá) de açúcar</li>
+        <li>3 colheres (sopa) rasas de farinha de trigo</li>
+        <li>1 copo de leite</li>
     </ul>
-    <p class="subtit">Modo de preparo: 50 min</p>
-    <p id="preparo">
+    </div>
+    <div class="linha-vertical"></div>
+    <div class="conteudo">
+    <p class="subtit2">Modo de preparo: 50 min</p>
+    <p>
         <ul>
             <li>Bata todos os ingredientes no liquidificador.</li>
             <li>Coloque em uma forma untada e enfarinhada.</li>
@@ -26,6 +40,8 @@
         </ul>
 
     </p>
+</div>
+</div>
 
 </body>
 </html>
