--- a/public/coxinha.html
+++ b/public/coxinha.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="coxinha.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+        Sabores da Cozinha
+        </div>
+    <button class="favorite-btn" onclick="adicionarLista()">Favoritar receita+</button>
+    </header>
     <h1>7.Coxinha</h1>
-    <p class="subtit">Ingredientes(50 porções):</p>
+    <div class="container">
+        <div class="conteudo">
+
+        <p class="subtit">Ingredientes(50 porções):</p>
         <ul>
             <li>2 copos de água</li>
             <li>1 colher de margarina</li>
@@ -16,12 +26,23 @@
             <li>1 cubo de caldo de galinha</li>
             <li>3 xícaras de trigo</li>
         </ul>
-      <p class="subtit">Modo de preparo: 10 min</p>  
-        <ul>
-            <li>Coloque a água, o leite, a margarina, o caldo e o sal em uma panela e misture até ferver.</li>
-            <li>Abaixe o fogo e acrescente o trigo de uma só vez.</li>
-            <li>Mexa até obter uma massa lisa e homogênea.</li>
-            <li>Recheie da maneira que preferir.</li>
-        </ul>
+        </div>
+        <div class="linha-vertical"></div>
+        <div class="conteudo">
+            <p class="subtit">Modo de preparo: 10 min</p>  
+                <ul>
+                    <li>Coloque a água, o leite, a margarina, o caldo e o sal em uma panela e misture até ferver.</li>
+                    <li>Abaixe o fogo e acrescente o trigo de uma só vez.</li>
+                    <li>Mexa até obter uma massa lisa e homogênea.</li>
+                    <li>Recheie da maneira que preferir.</li>
+                </ul>
+            </div>
+        </div>
+        <script>
+            function adicionarLista() 
+            {
+                alert("Receita adicionado aos favoritos!");
+            }
+        </script>
 </body>
 </html>
