--- a/public/paodequeijo.html
+++ b/public/paodequeijo.html
@@ -11,9 +11,7 @@
     <div class="logo">
     Sabor da Cozinha
     </div>
-    <button class="favorite-btn">
-        ❤️ Favoritar
-    </button>
+    <button class="favorite-btn" onclick="adicionarLista()">Favoritar receita+</button>
 </header>
     <h1>2.Pão de queijo caseiro</h1>
     
@@ -48,5 +46,11 @@
             </p>
         </div>
     </div>
+    <script>
+        function adicionarLista() 
+        {
+            alert("Receita adicionado aos favoritos!");
+        }
+    </script>
 </body>
 </html>
