--- a/public/paopizza.html
+++ b/public/paopizza.html
@@ -7,32 +7,47 @@
     <link rel="stylesheet" href="paopizza.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+            Sabores da Cozinha
+        </div>
+        <button class="favorite-btn" onclick="adicionarLista()">Favoritar receita+</button>
+    </header>
     <h1>9.Pão pizza</h1>
-    <p class="subtit">Ingredientes(5 porções):</p>
-        <ul>
-            <li>½ kg de farinha de trigo</li>
-            <li>1 colher de sobremesa de sal</li>
-            <li>1 pacote de fermento biológico em pó (aproximadamente 10g)</li>
-            <li>2 xícara de chá de leite morno</li>
-            <li>1 colher de sopa de óleo</li>
-            <li>1 colher de sopa de açúcar</li>
-            <li>1 ovo (somente a gema)</li>
-        </ul>
-    <p class="subtit">Modo de preparo: 50 min</p>
-        <ul>
-            <li>Misture o fermento com 1 xícara de leite morno, misture o açúcar também.</li>
-            <li>Reserve.</li>
-            <li>Coloque a farinha em um pote, misture o óleo o sal a gema na farinha e coloque a mistura do leite com o fermento junto.</li>
-            <li>A massa ficará um pouco dura, então você pode colocar a segunda xícara de leite até ela não grudar na mão.</li>
-            <li>Deixe descansar por 15 minutos.</li>
-            <li>Após 15 minutos divida a massa em quantas partes quiser, abra uma a uma bem fininha, coloque o recheio e depois é só enrolar.</li>
-            <li>Feche bem os cantos.</li>
-            <li>Coloque em uma forma untada e enfarinhada e pincele uma gema em cima deles.</li>
-            <li>Asse no forno a 180°C por cerca de 45 minutos ou até dourar.</li>
-        </ul>
-        <div class="favorite-container">
-            <input type="checkbox" id="favorite" class="favorite-checkbox">
-            <label for="favorite" class="favorite-button">
-              <span class="favorite-icon">&#9734;</span> Favoritar
+    <div class="container">
+        <div class="conteudo">
+        <p class="subtit">Ingredientes(5 porções):</p>
+            <ul>
+                <li>½ kg de farinha de trigo</li>
+                <li>1 colher de sobremesa de sal</li>
+                <li>1 pacote de fermento biológico em pó (aproximadamente 10g)</li>
+                <li>2 xícara de chá de leite morno</li>
+                <li>1 colher de sopa de óleo</li>
+                <li>1 colher de sopa de açúcar</li>
+                <li>1 ovo (somente a gema)</li>
+            </ul>
+        </div>
+        <div class="linha-vertical"></div>
+        <div class="conteudo">
+        <p class="subtit2">Modo de preparo: 50 min</p>
+            <ul>
+                <li>Misture o fermento com 1 xícara de leite morno, misture o açúcar também.</li>
+                <li>Reserve.</li>
+                <li>Coloque a farinha em um pote, misture o óleo o sal a gema na farinha e coloque a mistura do leite com o fermento junto.</li>
+                <li>A massa ficará um pouco dura, então você pode colocar a segunda xícara de leite até ela não grudar na mão.</li>
+                <li>Deixe descansar por 15 minutos.</li>
+                <li>Após 15 minutos divida a massa em quantas partes quiser, abra uma a uma bem fininha, coloque o recheio e depois é só enrolar.</li>
+                <li>Feche bem os cantos.</li>
+                <li>Coloque em uma forma untada e enfarinhada e pincele uma gema em cima deles.</li>
+                <li>Asse no forno a 180°C por cerca de 45 minutos ou até dourar.</li>
+            </ul>
+        </div>
+    </div>
+    <script>
+        function adicionarLista() 
+        {
+            alert("Receita adicionado aos favoritos!");
+        }
+    </script>
 </body>
 </html>
