--- a/public/acaraje.html
+++ b/public/acaraje.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="acaraje.css">
 </head>
 <body>
+    <header>
+        <div class="logo">
+        Sabores da Cozinha
+        </div>
+        <button class="favorite-btn" onclick="adicionarLista()">Favoritar receita+</button>
+    </header>
     <h1>8.Acarajé</h1>
+    <div class="container">
+        <div class="conteudo">
     <p class="subtit">Ingredientes:</p>
         <ul>
             <li>500 g de feijão fradinho cru</li>
@@ -18,34 +27,45 @@
             <li>500 ml de azeite de dendê</li>
             <li>150 g de camarão seco</li>
         </ul>
-      <p class="subtit">Modo de preparo: 2h</p>  
+    </div>
+    <div class="linha-vertical"></div>
+    <div class="conteudo">
+      <p class="subtit2">Modo de preparo: 2h</p>  
         <ul>
-            <li>Coloque os feijões inteiros num processador de alimentos e bata por alguns segundos para quebrar os grãos.</li>
-            <li>Cuidado para não esmigalhar.</li>
-            <li>Coloque os feijões num recipiente e cubra com água.</li>
-            <li>Deixe de molho por no mínimo 12 horas.</li>
-            <li>Agite os feijões com uma colher e com uma peneirinha vá retirando todas as cascas que se desprendem dos feijões.</li>
-            <li>Depois de retirar bastante as cascas, lave os feijões sob a água corrente e continue retirando o restante das cascas.</li>
-            <li>Retire o máximo possível.</li>
-            <li>Reserve.</li>
-            <li>Descasque as cebolas.</li>
-            <li>Corte em pedaços.</li>
-            <li>Reserve.</li>
-            <li>Num processador, coloque os feijões e as cebolas.</li>
-            <li>Bata por 3 minutos, ou até obter uma pasta lisa e uniforme.</li>
-            <li>Retire toda a pasta do processador e coloque dentro de uma panela grande e funda.</li>
-            <li>Com uma colher de pau, bata a massa do acarajé até que a massa triplique de volume.</li>
-            <li>Esse processo é bastante demorado mas é importante para a fermentação.</li>
-            <li>Coloque o óleo, o azeite de dendê, e a cebola com casca numa panela média e leve ao fogo alto para esquentar.</li>
-            <li>Com duas colheres de sopa, modele os acarajés: encha uma das colheres com a massa, passe de uma colher para a outra até que a massa fique com formato de bolinho.</li>
-            <li>Coloque os bolinhos no óleo bem quente e frite por 3 minutos de um lado.</li>
-            <li>Com uma escumadeira, vire os bolinhos e deixe fritar até que fiquem dourados.</li>
-            <li>Regule a temperatura do óleo.</li>
-            <li>Se for necessário, abaixe a chama do fogo para que o óleo não queime.</li>
-            <li>Retire os bolinhos com uma escumadeira e coloque sobre papel absorvente.</li>
-            <li>Corte os bolinhos ao meio e recheie com vatapá.</li>
-            <li>Coloque o camarão seco dentro do acarajé e feche.</li>
-            <li>Sirva a seguir.</li>
+            <li class="li2">Coloque os feijões inteiros num processador de alimentos e bata por alguns segundos para quebrar os grãos.</li>
+            <li class="li2">Cuidado para não esmigalhar.</li>
+            <li class="li2">Coloque os feijões num recipiente e cubra com água.</li>
+            <li class="li2">Deixe de molho por no mínimo 12 horas.</li>
+            <li class="li2">Agite os feijões com uma colher e com uma peneirinha vá retirando todas as cascas que se desprendem dos feijões.</li>
+            <li class="li2">Depois de retirar bastante as cascas, lave os feijões sob a água corrente e continue retirando o restante das cascas.</li>
+            <li class="li2">Retire o máximo possível.</li>
+            <li class="li2">Reserve.</li>
+            <li class="li2">Descasque as cebolas.</li>
+            <li class="li2">Corte em pedaços.</li>
+            <li class="li2">Reserve.</li>
+            <li class="li2">Num processador, coloque os feijões e as cebolas.</li>
+            <li class="li2">Bata por 3 minutos, ou até obter uma pasta lisa e uniforme.</li>
+            <li class="li2">Retire toda a pasta do processador e coloque dentro de uma panela grande e funda.</li>
+            <li class="li2">Com uma colher de pau, bata a massa do acarajé até que a massa triplique de volume.</li>
+            <li class="li2">Esse processo é bastante demorado mas é importante para a fermentação.</li>
+            <li class="li2">Coloque o óleo, o azeite de dendê, e a cebola com casca numa panela média e leve ao fogo alto para esquentar.</li>
+            <li class="li2">Com duas colheres de sopa, modele os acarajés: encha uma das colheres com a massa, passe de uma colher para a outra até que a massa fique com formato de bolinho.</li>
+            <li class="li2">Coloque os bolinhos no óleo bem quente e frite por 3 minutos de um lado.</li>
+            <li class="li2">Com uma escumadeira, vire os bolinhos e deixe fritar até que fiquem dourados.</li>
+            <li class="li2">Regule a temperatura do óleo.</li>
+            <li class="li2">Se for necessário, abaixe a chama do fogo para que o óleo não queime.</li>
+            <li class="li2">Retire os bolinhos com uma escumadeira e coloque sobre papel absorvente.</li>
+            <li class="li2">Corte os bolinhos ao meio e recheie com vatapá.</li>
+            <li class="li2">Coloque o camarão seco dentro do acarajé e feche.</li>
+            <li class="li2">Sirva a seguir.</li>
         </ul>
+        </div>
+    </div>
+    <script>
+        function adicionarLista() 
+        {
+            alert("Receita adicionado aos favoritos!");
+        }
+    </script>
 </body>
 </html>
