--- a/public/bolofuba.html
+++ b/public/bolofuba.html
@@ -11,9 +11,7 @@
     <div class="logo">
        Sabores da Cozinha
     </div>
-     <button class="favorite">
-            ❤️ Favoritar
-     </button>
+    <button class="favorite-btn" onclick="adicionarLista()">❤️ Favoritar</button>
     </header>
     <h1>3.Bolo de fubá</h1>
     <div class="container">
@@ -42,6 +40,12 @@
     </p>
 </div>
 </div>
+<script>
+    function adicionarLista() 
+    {
+        alert("Receita adicionado aos favoritos!");
+    }
+</script>
 
 </body>
 </html>
