--- a/public/brigadeiro.html
+++ b/public/brigadeiro.html
@@ -11,7 +11,7 @@
         <div class="logo">
         Sabores da Cozinha
         </div>
-        <button class="favorite-btn" onclick="adicionarLista()">Favoritar receita+</button>
+        <button class="favorite-btn" onclick="adicionarLista()">❤️ Favoritar</button>
     </header>
     <h1>1. Brigadeiro de colher</h1>
     <div class="container">
