--- a/public/arroz.html
+++ b/public/arroz.html
@@ -34,7 +34,7 @@
         </div>
         <div class="linha-vertical"></div>
         <div class="conteudo">
-            <p class="subtit">Modo de preparo: 45 min</p>
+            <p class="subtit2">Modo de preparo: 45 min</p>
                 <ul>
                     <li>Misture o conteúdo da lata de seleta de legumes com o arroz cozido, sem levar ao fogo e reserve.</li>
                     <li>Refogue a cebola no óleo, junte o tomate picado, o peito de frango desfiado e as 2 colheres de molho de tomate.</li>
