--- a/public/brigadeiro.html
+++ b/public/brigadeiro.html
@@ -29,7 +29,7 @@
     <div class="conteudo">
             <p class="subtit2">Modo de preparo: 20 min</p>
                 <ul>
-                    <li>Passo 1:Em uma panela funda, acrescente o leite condensado, a margarina e o chocolate em pó</li>
+                    <li>Passo 1:Em uma panela funda, acrescente o leite condensado, a margarina e o chocolate em pó.</li>
                     <li>Passo 2:Cozinhe em fogo médio e mexa até que o brigadeiro comece a desgrudar da panela.</li>
                     <li>Passo 3:Deixe esfriar e faça pequenas bolas com a mão passando a massa no chocolate granulado.</li>
                 </ul>
