--- a/public/coxinha.html
+++ b/public/coxinha.html
@@ -29,7 +29,7 @@
         </div>
         <div class="linha-vertical"></div>
         <div class="conteudo">
-            <p class="subtit">Modo de preparo: 10 min</p>  
+            <p class="subtit2">Modo de preparo: 10 min</p>  
                 <ul>
                     <li>Coloque a água, o leite, a margarina, o caldo e o sal em uma panela e misture até ferver.</li>
                     <li>Abaixe o fogo e acrescente o trigo de uma só vez.</li>
