--- a/public/feijoada.html
+++ b/public/feijoada.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <div class="logo">
-    Sabor da Cozinha
+    Sabores da Cozinha
     </div>
     <button class="favorite-btn" onclick="adicionarLista()">❤️ Favoritar</button>
     </header>
@@ -39,7 +39,7 @@
     </div>
     <div class="linha-vertical"></div>
     <div class="conteudo">
-    <p class="subtit">Modo de preparo: 2h20min</p>
+    <p class="subtit2">Modo de preparo: 2h20min</p>
         <ul>
             <li>Coloque as carnes de molho por 36 horas ou mais, vá trocando a água várias vezes, se for ambiente quente ou verão, 
                 coloque gelo por cima ou em camadas frias.</li>
