--- a/public/paodequeijo.html
+++ b/public/paodequeijo.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <div class="logo">
-    Sabor da Cozinha
+    Sabores da Cozinha
     </div>
     <button class="favorite-btn" onclick="adicionarLista()">❤️ Favoritar</button>
 </header>
