--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,13 @@
         <div class="logo">
         <h1>Sabores da Cozinha</h1>
         </div>
-        <div class="search-container">
-            <form action="/search" method="GET">
-              <input type="text" id="search" name="search" placeholder="Pesquisar..." required>
-              <button type="submit">Pesquisar</button>
+         <div class="login-box">
+            <form action="#">
+              <input type="text" name="username" placeholder="Usuário" required>
+              <input type="password" name="password" placeholder="Senha" required>
+              <input type="submit" value="Entrar">
             </form>
+            
           </div>
     </header>
     <img id="inicial" src="imagens comidas/" alt="inicial">
